# AeonSeed

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: aeonseed.yml  canary.yml  clippy.yml  rust.yml  test.yml
aeonseed/: Cargo.toml
aeonseed/src/: lib.rs  main.rs  player.rs  seed.rs  startup.rs  ui.rs
configs/: default.toml
crates/aeonseed-client/: Cargo.toml
crates/aeonseed-client/src/: main.rs
crates/aeonseed-core/: Cargo.toml
crates/aeonseed-core/src/: accessibility.rs  admin.rs  balancing.rs  dynamic_ui.rs  lib.rs  main.rs  mentor.rs  net_sim.rs  profile.rs
crates/aeonseed-core/src/account/: db.rs
crates/aeonseed-core/src/aeoncode/: fragment.rs  matrix.rs  mod.rs
crates/aeonseed-core/src/ai/: influence.rs  mod.rs  personality.rs  progression.rs  reputation.rs
crates/aeonseed-core/src/audio/: mod.rs  mood_engine.rs
crates/aeonseed-core/src/clan/: mod.rs  nomads.rs
crates/aeonseed-core/src/class/: morphing.rs  shadow_classes.rs
crates/aeonseed-core/src/cluster/: mod.rs  node.rs  topology.rs
crates/aeonseed-core/src/config/: ai_policy.rs
crates/aeonseed-core/src/events/: pvpve.rs  raid.rs
crates/aeonseed-core/src/expansions/: benchmarking.rs  currency.rs  decisions.rs  devtools.rs  dynamic_events.rs  evolving_zones.rs  feedback.rs  legacy.rs  memory.rs  mentoring.rs  mod.rs  regional_rules.rs  reputation.rs  scripting.rs  seed_fusion.rs  sidequests.rs  snapshots.rs  streaming.rs  timed_events.rs  twitch.rs  voting.rs  web_companion.rs
crates/aeonseed-core/src/features/: guilds.rs
crates/aeonseed-core/src/game/: player.rs  professions.rs  quests.rs
crates/aeonseed-core/src/instance/: shadow_realms.rs
crates/aeonseed-core/src/lang/: language_barriers.rs  mod.rs
crates/aeonseed-core/src/localization/: mod.rs  registry.rs  translator.rs  voice.rs
crates/aeonseed-core/src/modding/: mod.rs
crates/aeonseed-core/src/render/: models.rs
crates/aeonseed-core/src/reporting/: feedback.rs
crates/aeonseed-core/src/seednet/: network.rs
crates/aeonseed-core/src/seeds/: fusion.rs
crates/aeonseed-core/src/skills/: mod.rs
crates/aeonseed-core/src/soul/: modifications.rs  reincarnation.rs
crates/aeonseed-core/src/tools/: mod.rs
crates/aeonseed-core/src/ui/: mod.rs
crates/aeonseed-core/src/world/: anomalies.rs  mod.rs  resource_pressure.rs
crates/aeonseed-core/tests/: admin.rs  dynamic_ui.rs  mentor.rs
crates/aeonseed-engine/: Cargo.toml
crates/aeonseed-engine/src/: lib.rs
crates/aeonseed-server/: Cargo.toml
crates/aeonseed-server/src/: main.rs
dev/: mini_seed.rs
docs/: ADMIN_COMMANDS.md  AI_BALANCING.md  ARCHITECTURE.md  BUILD.md  CONTRIBUTING.md  DEV_GUIDE.md  DEV_WORKFLOW.md  FEATURES.md  FEATURES_100.md  INSTALL.md  INSTALLATION.md  KNOWN_ISSUES.md  MODDING_API.md  RELEASE_GUIDE.md  ROADMAP.md  SEED_AI.md  SEED_ARCHIVE.md  SEED_FUSION.md  SEED_STARTUP.md  SEED_SYSTEMS.md  TESTING.md  expansion_map.md
examples/: admin_monitor.rs  seed_config.toml
scenarios/: fusion_example.md
scripts/: gen_dep_graph.sh  update_version.sh
src/: lib.rs  main.rs  seed_ai.rs
src/account/: db.rs  mod.rs  session.rs
src/aeoncode/: interpreter.rs
src/ai/: aeoncode.rs  cluster_ai.rs  language.rs  memory.rs  mod.rs  npc_core.rs  world_ai.rs
src/clan/: fortresses.rs
src/class/: mod.rs
src/cluster/: camouflage.rs  core.rs  magnetism.rs  mod.rs
src/config/: mod.rs
src/events/: dungeon.rs  mod.rs  pvp.rs  pvpve.rs  raid.rs  ritual.rs
src/game/: classes.rs  ethics.rs  factions.rs  mod.rs  player.rs  soul.rs
src/infra/: mod.rs  redis.rs  updater.rs
src/instance/: mod.rs
src/localization/: auto_translate.rs  mod.rs  translator.rs  voice.rs
src/modding/: api.rs
src/render/: camera.rs  mod.rs  zones.rs
src/seednet/: discovery.rs  dna.rs  health.rs  mod.rs  network.rs  seed.rs
src/server/: main.rs
src/skills/: mutation.rs
src/soul/: mod.rs
src/tools/: cluster_dashboard.rs
src/ui/: auth_ui.rs
src/world/: climate.rs
src/zones/: alignment.rs
