[package]
name = "aeonseed"
version = "0.1.0"
edition = "2021"
description = "Open source AI-driven MMORPG prototype"
keywords = ["MMORPG", "bevy", "ai", "game"]
license = "AGPL-3.0"
repository = "https://github.com/itsamemedev/AeonSeed"

[features]
archive-seeds = []
aeon-code = []

[dependencies]
bevy = "0.13"
bevy-inspector-egui = "0.23"
bevy_core_pipeline = "0.13"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
dotenvy = "0.15"
serde_yaml = "0.9"

[lib]
path = "src/lib.rs"

[[bin]]
name = "aeonseed-server"
path = "src/server/main.rs"
